<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lockscreen Birthdays</string>
    <string name="title_activity_main">Birthdays</string>
    <string name="action_settings">Settings</string>
    <string name="title_feedback">Send Feedback…</string>
    <string name="title_beer">Buy me a beer…</string>
    <string name="creditsTitle">Credits</string>

    <string name="birthday_tomorrow">Tomorrow is %1$s\'s birthday!</string>
    <string name="birthday_today">It\'s %1$s\'s birthday today!</string>
    <string name="birthday_tomorrowAge">%1$s turns %2$d tomorrow!</string>
    <string name="birthday_todayAge">%1$s turns %2$d today!</string>
    <string name="birthday_daysAge">%1$s turns %2$d in %3$d days!</string>
    <string name="birthday_days">It\'s %1$s\'s birthday in %2$d days!</string>

    <string name="showcase_serviceTitle">Lockscreen</string>
    <string name="showcase_serviceText">Enable the service to show birthdays on your lockscreen.</string>
    <string name="summary_beer">You can support my work by donating a small amount.</string>
    <string name="summary_daysTillBirthday">{0,choice,0#…on birthday.|1#…one day before birthday.|1&lt;…{0} days before birthday.}</string>
    <string name="summary_keepAfterLogin">… for {0} seconds.</string>
    <string name="title_daysTillBirthday">Show a notification…</string>
    <string name="title_keepAfterLogin">Keep notification after login…</string>
    <string name="title_icon">App Icon</string>

    <string name="action_dismiss">Dismiss for today</string>

    <string name="channel_birthdays_name">Birthdays</string>
    <string name="channel_birthdays_description">All birthday notifications</string>
    <string name="channel_service_name">Service</string>
    <string name="channel_service_description">Keep the Service running</string>
    <string name="slide_title_welcome">Welcome</string>
    <string name="slide_desc_welcome">This app shows the birthdays of your contacts as a notification after turning on your device screen.</string>
    <string name="slide_title_permissions">Permissions</string>
    <string name="slide_desc_permissions">This app needs the permission to read contacts to function properly.</string>
    <string name="slide_title_battery">Battery Optimizations</string>
    <string name="slide_desc_battery">Please turn off battery optimizations for this app to make sure it can run in the background and can remind you of your contact\'s birthdays.</string>
    <string name="slide_btn_battery">Turn off Battery Optimizations</string>

    <string-array name="donationValues">
        <item>A coffee</item>
        <item>a beer</item>
        <item>A cocktail</item>
    </string-array>

    <string-array name="iconNames">
        <item>Material Cake</item>
        <item>Material Cupcake</item>
        <item>Cake</item>
        <item>Cupcake</item>
    </string-array>

</resources>
