<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <de.devland.lockscreenbirthdays.prefs.IconPickerPreference
        android:entries="@array/iconNames"
        android:entryValues="@array/iconEntries"
        android:key="icon"
        android:layout="@layout/preference_icon_item"
        android:title="@string/title_icon" />
    <EditTextPreference
        android:inputType="number"
        android:key="maxDaysTillBirthday"
        android:title="@string/title_daysTillBirthday" />
    <EditTextPreference
        android:inputType="number"
        android:key="keepAfterLogin"
        android:title="@string/title_keepAfterLogin" />
    <de.devland.lockscreenbirthdays.prefs.FeedbackPreference android:title="@string/title_feedback" />
    <de.devland.lockscreenbirthdays.prefs.InformationDialogPreference
        content="raw/credits"
        android:title="@string/creditsTitle" />
</PreferenceScreen>